objects/WAM_TA_Reference__c/WAM_TA_Reference__c.object-meta.xml
<CustomObject>
    <description>WAMCRM: List of TA Distributors for distribution ID lookup.</description>
    <label>WAM TA Reference</label>
    <nameField>
        <label>TA Reference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WAM TA Reference</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>