objects/WAM_TA_Reference__c/fields/Channel_Code__c.field-meta.xml
<CustomField>
    <fullName>Channel_Code__c</fullName>
    <description>WAMCRM : Channel Code</description>
    <inlineHelpText>WAMCRM : Channel Code</inlineHelpText>
    <label>Channel Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>