objects/WAM_TA_Reference__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>WAMCRM : Company Code</description>
    <externalId>true</externalId>
    <inlineHelpText>WAMCRM : Company Code</inlineHelpText>
    <label>Code</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>