objects/WAM_TA_Reference__c/fields/Head_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Head_Company_Code__c</fullName>
    <label>Head Company Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>