objects/WAM_TA_Reference__c/fields/Head_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Head_Company_Name__c</fullName>
    <label>Head Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>