objects/WAM_TA_Reference__c/fields/Level_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Level_Indicator__c</fullName>
    <label>Level Indicator</label>
    <length>20</length>
    <type>Text</type>
</CustomField>