objects/WAM_TA_Reference__c/fields/Sub_Channel_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Channel_Code__c</fullName>
    <description>WAMCRM : Sub Channel Code</description>
    <inlineHelpText>WAMCRM : Sub Channel Code</inlineHelpText>
    <label>Sub Channel Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>