objects/WAM_TA_Reference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Level_Indicator__c</columns>
    <columns>Code__c</columns>
    <columns>NAME</columns>
    <columns>Head_Company_Code__c</columns>
    <columns>Head_Company_Name__c</columns>
    <columns>Channel_Code__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>